chore: use AssertJ for tests