@@ -1,8 +1,6 @@
 package ch.sbb.backend.logging;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import ch.sbb.backend.TestContainerConfiguration;
 import ch.sbb.backend.logging.domain.model.Tenant;
@@ -23,18 +21,13 @@ class TenantConfigTest {
     @Test
     void should_load_tenants_from_configuration() {
         List<Tenant> tenants = tenantConfig.getTenants();
-        assertNotNull(tenants);
-        assertFalse(tenants.isEmpty());
-        assertEquals(1, tenants.size());
-        assertEquals("test", tenants.get(0).name());
-        assertEquals("3409e798-d567-49b1-9bae-f0be66427c54", tenants.get(0).id());
-        assertEquals(
-            "https://login.microsoftonline.com/3409e798-d567-49b1-9bae-f0be66427c54/v2.0",
-            tenants.get(0).issuerUri()
-        );
-        assertEquals(
-            "https://login.microsoftonline.com/3409e798-d567-49b1-9bae-f0be66427c54/discovery/v2.0/keys",
-            tenants.get(0).jwkSetUri()
-        );
+        assertThat(tenants).isNotNull()
+            .isNotEmpty()
+            .hasSize(1);
+        Tenant tenant = tenants.getFirst();
+        assertThat(tenant.name()).isEqualTo("test");
+        assertThat(tenant.id()).isEqualTo("3409e798-d567-49b1-9bae-f0be66427c54");
+        assertThat(tenant.issuerUri()).isEqualTo("https://login.microsoftonline.com/3409e798-d567-49b1-9bae-f0be66427c54/v2.0");
+        assertThat(tenant.jwkSetUri()).isEqualTo("https://login.microsoftonline.com/3409e798-d567-49b1-9bae-f0be66427c54/discovery/v2.0/keys");
     }
 }
